--- a/Facial_Key_Points_Detection.ipynb
+++ b/Facial_Key_Points_Detection.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOlue5rgNB+Uxnm4VrPxEIU",
+      "authorship_tag": "ABX9TyMnTi2mJ3rPSbTGYuieMisi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1186,6 +1186,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "B_ATQLQNn8BS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#  model parameters\n",
+        "\n",
+        "model_parameters = filter(lambda p: p.requires_grad, model.parameters())\n",
+        "params = sum([np.prod(p.size()) for p in model_parameters])\n",
+        "print(\"Learnable parameters:\",params)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Iu7vs3CzgZhQ",
         "colab_type": "code",
         "colab": {}
@@ -1225,14 +1242,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 503
+          "height": 1000
         },
         "outputId": "0f3d73b8-24b2-4b8c-e7bb-77b3a46df014"
       },
       "source": [
         "model=Solver_NN(model, train_loader, val_loader, optim, criterion, device, scheduler, print_every=5, epoch=101, lr=lr)"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,11 +1281,225 @@
             "Epoch [5/101], Step [10/12] Loss: 3.9492001056671144\n",
             "Train loss in epoch 5 is 4.033144454161326\n",
             "Validation loss in epoch 5 is 3.8958747386932373\n",
+            " \n",
+            "Epoch [6/101], Step [5/12] Loss: 3.4741679191589356\n",
+            "Epoch [6/101], Step [10/12] Loss: 4.103401517868042\n",
+            "Train loss in epoch 6 is 4.363935907681783\n",
+            "Validation loss in epoch 6 is 4.252163410186768\n",
+            " \n",
+            "Epoch [7/101], Step [5/12] Loss: 3.9156855583190917\n",
+            "Epoch [7/101], Step [10/12] Loss: 3.5613749504089354\n",
+            "Train loss in epoch 7 is 3.0196955601374307\n",
+            "Validation loss in epoch 7 is 2.84429399172465\n",
+            " \n",
+            "Epoch [8/101], Step [5/12] Loss: 4.260841178894043\n",
+            "Epoch [8/101], Step [10/12] Loss: 4.328153800964356\n",
+            "Train loss in epoch 8 is 3.310142755508423\n",
+            "Validation loss in epoch 8 is 3.111472765604655\n",
+            " \n",
+            "Epoch [9/101], Step [5/12] Loss: 3.2320122718811035\n",
+            "Epoch [9/101], Step [10/12] Loss: 3.500285768508911\n",
+            "Train loss in epoch 9 is 6.102919419606526\n",
+            "Validation loss in epoch 9 is 5.902072429656982\n",
+            " \n",
+            "Epoch [10/101], Step [5/12] Loss: 4.480929183959961\n",
+            "Epoch [10/101], Step [10/12] Loss: 3.730688381195068\n",
+            "Train loss in epoch 10 is 4.364284515380859\n",
+            "Validation loss in epoch 10 is 4.2092658678690595\n",
+            " \n",
+            "Epoch [11/101], Step [5/12] Loss: 3.44220085144043\n",
+            "Epoch [11/101], Step [10/12] Loss: 3.351916790008545\n",
+            "Train loss in epoch 11 is 4.436177929242452\n",
+            "Validation loss in epoch 11 is 4.302491823832194\n",
+            " \n",
+            "Epoch [12/101], Step [5/12] Loss: 4.12190055847168\n",
+            "Epoch [12/101], Step [10/12] Loss: 3.4236505031585693\n",
+            "Train loss in epoch 12 is 2.9552436073621116\n",
+            "Validation loss in epoch 12 is 2.711742321650187\n",
+            " \n",
+            "Epoch [13/101], Step [5/12] Loss: 3.0541409492492675\n",
+            "Epoch [13/101], Step [10/12] Loss: 3.380896520614624\n",
+            "Train loss in epoch 13 is 2.892291565736135\n",
+            "Validation loss in epoch 13 is 2.7074081897735596\n",
+            " \n",
+            "Epoch [14/101], Step [5/12] Loss: 3.317555618286133\n",
+            "Epoch [14/101], Step [10/12] Loss: 4.417555332183838\n",
+            "Train loss in epoch 14 is 3.5638904571533203\n",
+            "Validation loss in epoch 14 is 3.4150171279907227\n",
+            " \n",
+            "Epoch [15/101], Step [5/12] Loss: 3.332339906692505\n",
+            "Epoch [15/101], Step [10/12] Loss: 3.0986372947692873\n",
+            "Train loss in epoch 15 is 3.1583319107691445\n",
+            "Validation loss in epoch 15 is 2.9575746854146323\n",
+            " \n",
+            "Epoch [16/101], Step [5/12] Loss: 3.3445370197296143\n",
+            "Epoch [16/101], Step [10/12] Loss: 3.0250680923461912\n",
+            "Train loss in epoch 16 is 2.9873194893201194\n",
+            "Validation loss in epoch 16 is 2.7082873980204263\n",
+            " \n",
+            "Epoch [17/101], Step [5/12] Loss: 3.3251816749572756\n",
+            "Epoch [17/101], Step [10/12] Loss: 3.047723960876465\n",
+            "Train loss in epoch 17 is 3.0316712260246277\n",
+            "Validation loss in epoch 17 is 2.784740606943766\n",
+            " \n",
+            "Epoch [18/101], Step [5/12] Loss: 3.235590696334839\n",
+            "Epoch [18/101], Step [10/12] Loss: 3.0678720474243164\n",
+            "Train loss in epoch 18 is 3.098607659339905\n",
+            "Validation loss in epoch 18 is 2.893959919611613\n",
+            " \n",
+            "Epoch [19/101], Step [5/12] Loss: 2.989761781692505\n",
+            "Epoch [19/101], Step [10/12] Loss: 3.010663604736328\n",
+            "Epoch    19: reducing learning rate of group 0 to 1.0000e-03.\n",
+            "Train loss in epoch 19 is 2.9383850495020547\n",
+            "Validation loss in epoch 19 is 2.7965741952260337\n",
+            " \n",
+            "Epoch [20/101], Step [5/12] Loss: 2.9392295360565184\n",
+            "Epoch [20/101], Step [10/12] Loss: 2.84428391456604\n",
+            "Train loss in epoch 20 is 2.864435335000356\n",
+            "Validation loss in epoch 20 is 2.6854240894317627\n",
+            " \n",
+            "Epoch [21/101], Step [5/12] Loss: 2.8567928314208983\n",
+            "Epoch [21/101], Step [10/12] Loss: 2.733397054672241\n",
+            "Train loss in epoch 21 is 2.9086703260739646\n",
+            "Validation loss in epoch 21 is 2.69393261273702\n",
+            " \n",
+            "Epoch [22/101], Step [5/12] Loss: 2.8040841579437257\n",
+            "Epoch [22/101], Step [10/12] Loss: 2.713369607925415\n",
+            "Train loss in epoch 22 is 2.7616641521453857\n",
+            "Validation loss in epoch 22 is 2.571007013320923\n",
+            " \n",
+            "Epoch [23/101], Step [5/12] Loss: 2.7723631381988527\n",
+            "Epoch [23/101], Step [10/12] Loss: 2.7205179214477537\n",
+            "Train loss in epoch 23 is 2.7776387333869934\n",
+            "Validation loss in epoch 23 is 2.5713197390238443\n",
+            " \n",
+            "Epoch [24/101], Step [5/12] Loss: 2.728250741958618\n",
+            "Epoch [24/101], Step [10/12] Loss: 2.7149077892303466\n",
+            "Train loss in epoch 24 is 2.7813876072565713\n",
+            "Validation loss in epoch 24 is 2.6007601420084634\n",
+            " \n",
+            "Epoch [25/101], Step [5/12] Loss: 2.815529441833496\n",
+            "Epoch [25/101], Step [10/12] Loss: 2.6259331703186035\n",
+            "Train loss in epoch 25 is 2.740438222885132\n",
+            "Validation loss in epoch 25 is 2.5699299971262612\n",
+            " \n",
+            "Epoch [26/101], Step [5/12] Loss: 2.756096124649048\n",
+            "Epoch [26/101], Step [10/12] Loss: 2.665721225738525\n",
+            "Train loss in epoch 26 is 2.750551442305247\n",
+            "Validation loss in epoch 26 is 2.5807034174601235\n",
+            " \n",
+            "Epoch [27/101], Step [5/12] Loss: 2.672693204879761\n",
+            "Epoch [27/101], Step [10/12] Loss: 2.6986228942871096\n",
+            "Train loss in epoch 27 is 2.775682548681895\n",
+            "Validation loss in epoch 27 is 2.572003126144409\n",
+            " \n",
+            "Epoch [28/101], Step [5/12] Loss: 2.660601854324341\n",
+            "Epoch [28/101], Step [10/12] Loss: 2.75215425491333\n",
+            "Train loss in epoch 28 is 2.8056940038998923\n",
+            "Validation loss in epoch 28 is 2.595994710922241\n",
+            " \n",
+            "Epoch [29/101], Step [5/12] Loss: 2.6271704196929933\n",
+            "Epoch [29/101], Step [10/12] Loss: 2.758008861541748\n",
+            "Train loss in epoch 29 is 2.6931968927383423\n",
+            "Validation loss in epoch 29 is 2.5456687609354653\n",
+            " \n",
+            "Epoch [30/101], Step [5/12] Loss: 2.683907175064087\n",
+            "Epoch [30/101], Step [10/12] Loss: 2.606329870223999\n",
+            "Train loss in epoch 30 is 2.727047026157379\n",
+            "Validation loss in epoch 30 is 2.5461572806040444\n",
+            " \n",
+            "Epoch [31/101], Step [5/12] Loss: 2.655706596374512\n",
+            "Epoch [31/101], Step [10/12] Loss: 2.659511852264404\n",
+            "Train loss in epoch 31 is 2.727703034877777\n",
+            "Validation loss in epoch 31 is 2.586572806040446\n",
+            " \n",
+            "Epoch [32/101], Step [5/12] Loss: 2.7690253257751465\n",
+            "Epoch [32/101], Step [10/12] Loss: 2.589116334915161\n",
+            "Train loss in epoch 32 is 2.7089908719062805\n",
+            "Validation loss in epoch 32 is 2.5289299488067627\n",
+            " \n",
+            "Epoch [33/101], Step [5/12] Loss: 2.6133728504180906\n",
+            "Epoch [33/101], Step [10/12] Loss: 2.680046272277832\n",
+            "Train loss in epoch 33 is 2.732800463835398\n",
+            "Validation loss in epoch 33 is 2.547942797342936\n",
+            " \n",
+            "Epoch [34/101], Step [5/12] Loss: 2.727611541748047\n",
+            "Epoch [34/101], Step [10/12] Loss: 2.6158266067504883\n",
+            "Train loss in epoch 34 is 2.6664154728253684\n",
+            "Validation loss in epoch 34 is 2.5416905085245767\n",
+            " \n",
+            "Epoch [35/101], Step [5/12] Loss: 2.6305259227752686\n",
+            "Epoch [35/101], Step [10/12] Loss: 2.696837377548218\n",
+            "Train loss in epoch 35 is 2.7660550475120544\n",
+            "Validation loss in epoch 35 is 2.541198412577311\n",
+            " \n",
+            "Epoch [36/101], Step [5/12] Loss: 2.6401690006256104\n",
+            "Epoch [36/101], Step [10/12] Loss: 2.6940598487854004\n",
+            "Train loss in epoch 36 is 2.7290623784065247\n",
+            "Validation loss in epoch 36 is 2.5499725341796875\n",
             " \n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-58-696f54609ae8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSolver_NN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprint_every\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-44-6779e491feea>\u001b[0m in \u001b[0;36mSolver_NN\u001b[0;34m(model, train_loader, val_loader, optim, criterion, device, scheduler, print_every, epoch, lr, eps)\u001b[0m\n\u001b[1;32m     31\u001b[0m       \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m       \u001b[0;31m####################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m       \u001b[0mrunning_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mprint_every\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m       \u001b[0;31m# print every 10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"Epoch [{}/{}], Step [{}/{}] Loss: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounter\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrunning_loss\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mprint_every\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GRWbTQmhoP5u",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Testing "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HYM4QP7fohgH",
+        "colab_type": "text"
+      },
+      "source": [
+        "Lets look at the testing data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CXTnlPMbokNA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_csv.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0QGSnjF9oRyj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_loader= DataLoader(test_dataset, batch_size= 512, shuffle=True, num_workers=8) "
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
