--- a/Facial_Key_Points_Detection.ipynb
+++ b/Facial_Key_Points_Detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Facial Key Points Detection.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPew/+sBFnUSAEcCHCOhfbe",
+      "authorship_tag": "ABX9TyO/S46QYAZ95foEz2lSwOi9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive/')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "#changing the working directory\n",
         "%cd /content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
         "import os\n",
         "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/My Drive/Machine Learning/Kaggle\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "plt.ion()   # interactive mode"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "source": [
         "torch.cuda.is_available()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print(device)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +342,7 @@
         "test_csv=pd.read_csv(\"/content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection/test.csv\")\n",
         "IdLookupTable_csv=pd.read_csv(\"/content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection/IdLookupTable.csv\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
         "# exploring the train data, each row is an example\n",
         "train_csv.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +635,7 @@
         "# total number of missing values\n",
         "print(f\"The total number of missing values in the train dataset is/are: {train_csv.isnull().sum().sum()}\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
         "\n",
         "print(f\"The key point  list is: {key_points}\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,7 +711,7 @@
         "#  Checking again to see the number of missing values\n",
         "print(f\"The total number of missing values in the train dataset is/are: {train_csv.isnull().sum().sum()}\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +748,7 @@
         "train_split.to_csv(\"train_split.csv\", index= False)\n",
         "val_split.to_csv(\"val_split.csv\", index= False)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +789,7 @@
         "    else:\n",
         "      return image"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
         "    #####################################################################\n",
         "    return X_norm"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +827,7 @@
         "val_dataset= faces(csv_loc=\"/content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection/val_split.csv\", train= True, transform=transforms.Compose([feature_normalize(), transforms.ToTensor()]))\n",
         "test_dataset= faces(csv_loc=\"/content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection/test.csv\", train= False, transform=transforms.Compose([feature_normalize(), transforms.ToTensor()]))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,7 +846,7 @@
         "print(f\"Number of examples in validation dataset: {len(val_dataset)}\")\n",
         "print(f\"Number of examples in test dataset: {len(test_dataset)}\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,7 +899,7 @@
         "\n",
         "  return image, key_points"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -918,7 +918,7 @@
         "print(f\"Sample image number: {sample}\\n\")\n",
         "image ,feature=image_show(sample, csv_loc=\"/content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection/train_split.csv\")"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +961,7 @@
         "colab": {}
       },
       "source": [
-        "def cal_loss(model, loader, criterion, eps=1e-6):\n",
+        "def cal_loss(model, loader, criterion):\n",
         "  loss_total=0 \n",
         "  total_step=len(loader)\n",
         "\n",
@@ -969,12 +969,12 @@
         "    x=x.to(device=device, dtype=torch.float)\n",
         "    y=y.to(device=device, dtype=torch.long)\n",
         "    y_pred=model(x)                  \n",
-        "    loss=torch.sqrt(criterion(y_pred, y) + eps) \n",
+        "    loss=torch.sqrt(criterion(y_pred, y)) \n",
         "    loss_total+=loss.item()\n",
         "  \n",
         "  return (loss_total/total_step)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1010,7 +1010,7 @@
         "     \n",
         "      #forward pass########\n",
         "      y_pred=model(x)                  \n",
-        "      loss=criterion(y_pred, y)   \n",
+        "      loss=torch.sqrt(criterion(y_pred, y))   \n",
         "      ####################\n",
         "      \n",
         "      # backward pass#######     \n",
@@ -1031,7 +1031,7 @@
         "      print(f\"Validation loss in epoch {e+1} is {val_loss}\\n \")         \n",
         "  return model"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1075,7 +1075,7 @@
         "\n",
         "    return x"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1096,7 +1096,7 @@
         "model= Resnet(num_input_channels, output, resnet)\n",
         "print(model)\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,7 +1227,7 @@
         "params = sum([np.prod(p.size()) for p in model_parameters])\n",
         "print(\"Learnable parameters:\",params)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,7 +1254,7 @@
         "optim=torch.optim.Adam(model.parameters(), lr=lr, weight_decay=0.01) # optimizer \n",
         "scheduler= ReduceLROnPlateau(optim, mode=\"min\", factor=0.1, patience=5, verbose=True)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1270,7 +1270,7 @@
         "train_loader=DataLoader(train_dataset, batch_size=1024, shuffle=True, num_workers=16) \n",
         "val_loader=DataLoader(val_dataset, batch_size=1024, shuffle=True, num_workers=16) "
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1287,7 +1287,7 @@
       "source": [
         "model=Solver_NN(model, train_loader, val_loader, optim, criterion, device, scheduler, print_every=3, epoch=101, lr=lr)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1821,7 +1821,7 @@
       "source": [
         "torch.save(model.state_dict(), '/content/gdrive/My Drive/Machine Learning/Kaggle/Facial Key Points Detection/weights/weights.pkl') "
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1858,7 +1858,7 @@
       "source": [
         "test_csv.head()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1942,7 +1942,7 @@
       "source": [
         "test_loader= DataLoader(test_dataset, batch_size= 512, shuffle=True, num_workers=16) "
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1964,7 +1964,7 @@
         "  \n",
         "  "
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1979,7 +1979,7 @@
         "imageID = list(IdLookupTable_csv['ImageId']-1)\n",
         "pre_list = list(Y)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1993,7 +1993,7 @@
         "rowid = IdLookupTable_csv['RowId']\n",
         "rowid=list(rowid)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2008,7 +2008,7 @@
         "for f in list(IdLookupTable_csv['FeatureName']):\n",
         "    feature.append(lookid_list.index(f))"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2023,7 +2023,7 @@
         "for x,y in zip(imageID,feature):\n",
         "    preded.append(pre_list[x][y])"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2036,7 +2036,7 @@
       "source": [
         "rowid = pd.Series(rowid,name = 'RowId')"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2049,7 +2049,7 @@
       "source": [
         "loc = pd.Series(preded,name = 'Location')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2062,7 +2062,7 @@
       "source": [
         "submission = pd.concat([rowid,loc],axis = 1)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2075,7 +2075,7 @@
       "source": [
         "submission.to_csv('face_key_detection_submission_2.csv', index = False)\n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
