--- a/Facial_Key_Points_Detection.ipynb
+++ b/Facial_Key_Points_Detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Facial Key Points Detection.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyO/S46QYAZ95foEz2lSwOi9",
+      "authorship_tag": "ABX9TyORyeCep+CfRrJYnyY/xT9B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1000,6 +1000,7 @@
         "  counter=0\n",
         "\n",
         "  for e in range(epoch):\n",
+        "    model.train()\n",
         "    running_loss = 0.0    \n",
         "    epoch_loss=0.0\n",
         "    for i, (x,y) in enumerate(train_loader):\n",
@@ -1022,7 +1023,7 @@
         "        print (\"Epoch [{}/{}], Step [{}/{}] Loss: {}\".format(counter+1, epoch, i+1, total_step, running_loss/print_every))\n",
         "        running_loss = 0.0    \n",
         "    counter+=1     \n",
-        "\n",
+        "    model.eval()\n",
         "    with torch.no_grad():            \n",
         "      train_loss= cal_loss(model, train_loader, criterion)\n",
         "      val_loss= cal_loss(model, val_loader, criterion)\n",
@@ -1953,6 +1954,7 @@
         "colab": {}
       },
       "source": [
+        "model.eval()\n",
         "with torch.no_grad():\n",
         "  Y_preds=list()\n",
         "  for x in test_loader:\n",
@@ -1960,9 +1962,7 @@
         "    y_pred=model(x).to(device=\"cpu\")\n",
         "    Y_preds.append(y_pred)\n",
         "    \n",
-        "  Y= torch.cat(Y_preds, dim=0).tolist()\n",
-        "  \n",
-        "  "
+        "  Y= torch.cat(Y_preds, dim=0).tolist()  "
       ],
       "execution_count": null,
       "outputs": []
@@ -2073,7 +2073,7 @@
         "colab": {}
       },
       "source": [
-        "submission.to_csv('face_key_detection_submission_2.csv', index = False)\n"
+        "submission.to_csv('face_key_detection_submission_2.csv', index = False)"
       ],
       "execution_count": null,
       "outputs": []
